--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,15 +35,15 @@ services:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
       - traefik.constraint-label=traefik-public
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-http.rule=Host(`adminer.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-http.entrypoints=http
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-https.rule=Host(`adminer.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-https.entrypoints=https
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-https.tls=true
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-https.tls.certresolver=le
-      - traefik.http.services.${STACK_NAME?Variable not set}-adminer.loadbalancer.server.port=8080
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-http.rule=Host(`adminer.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-http.entrypoints=http
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-https.rule=Host(`adminer.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-https.entrypoints=https
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-https.tls=true
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-https.tls.certresolver=le
+      - traefik.http.services.${PROJECT_NAME?Variable not set}-adminer.loadbalancer.server.port=8080
       #Enable HTTPS redirect 
-      - traefik.http.routers.${STACK_NAME?Variable not set}-adminer-http.middlewares=https-redirect
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-adminer-http.middlewares=https-redirect
 
   prestart:
     build:
@@ -100,17 +100,17 @@ services:
       - traefik.docker.network=traefik-public
       - traefik.constraint-label=traefik-public
 
-      - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=8000
+      - traefik.http.services.${PROJECT_NAME?Variable not set}-backend.loadbalancer.server.port=8000
 
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=Host(`api.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.entrypoints=http
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-https.rule=Host(`api.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-https.entrypoints=https
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-https.tls=true
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-https.tls.certresolver=le
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-http.rule=Host(`api.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-http.entrypoints=http
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-https.rule=Host(`api.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-https.entrypoints=https
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-https.tls=true
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-https.tls.certresolver=le
 
       #Enable HTTPS redirect 
-      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.middlewares=https-redirect
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-backend-http.middlewares=https-redirect
     
 
   frontend:
@@ -130,18 +130,18 @@ services:
       - traefik.docker.network=traefik-public
       - traefik.constraint-label=traefik-public
 
-      - traefik.http.services.${STACK_NAME?Variable not set}-frontend.loadbalancer.server.port=80
+      - traefik.http.services.${PROJECT_NAME?Variable not set}-frontend.loadbalancer.server.port=80
 
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.rule=Host(`${FRONTEND_SDOMAIN:-resume-service}.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.entrypoints=http
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-http.rule=Host(`${FRONTEND_SDOMAIN:-resume-service}.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-http.entrypoints=http
 
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-https.rule=Host(`${FRONTEND_DOMAIN:-resume-service}}.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-https.entrypoints=https
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-https.tls=true
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-https.tls.certresolver=le
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.rule=Host(`${FRONTEND_DOMAIN:-resume-service}}.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.entrypoints=https
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.tls=true
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.tls.certresolver=le
 
       #Enable HTTPS redirect 
-      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.middlewares=https-redirect
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-http.middlewares=https-redirect
 
 volumes:
   app-db-data:
