--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - "8000:8000"
     networks:
       - default
+      - traefik-public
     build:
       context: ./backend
     env_file:
@@ -119,6 +120,7 @@ services:
         - .env
       networks:
         - default
+        - traefik-public
       ports:
       - "5173:80"
       build:
@@ -132,10 +134,10 @@ services:
 
       - traefik.http.services.${PROJECT_NAME?Variable not set}-frontend.loadbalancer.server.port=80
 
-      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-http.rule=Host(`${FRONTEND_SDOMAIN:-resume-service}.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-http.rule=Host(`${DOMAIN?Variable not set}`)
       - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-http.entrypoints=http
 
-      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.rule=Host(`${FRONTEND_DOMAIN:-resume-service}}.${DOMAIN?Variable not set}`)
+      - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.rule=Host(`${DOMAIN?Variable not set}`)
       - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.entrypoints=https
       - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.tls=true
       - traefik.http.routers.${PROJECT_NAME?Variable not set}-frontend-https.tls.certresolver=le
